--- a/pypal_insights_.ipynb
+++ b/pypal_insights_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNazexPjqQuZLLH15NixXUm",
+      "authorship_tag": "ABX9TyM9Ac3srw9UY/JO5P87XU+V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,9 +54,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ycHfAW-H7C1T",
-        "outputId": "f613d4bd-a8bb-4951-8f77-a425e579b341"
+        "outputId": "147a463d-9711-4530-9458-52a4c0c4c0c9"
       },
-      "execution_count": 12,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L1hebdQr_RfW",
-        "outputId": "a6274182-42e2-4eed-eb92-49d0ff3a05ca"
+        "outputId": "a842d719-ae7c-4e0e-e49b-a3b1b4012521"
       },
       "execution_count": 24,
       "outputs": [
@@ -174,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dfr1x_OwF1FE",
-        "outputId": "7a561d0d-d21a-43a7-efaa-d1db27b36bb6"
+        "outputId": "986ce03c-b5a8-4a97-e8f3-c7ea1a1f4899"
       },
       "execution_count": 25,
       "outputs": [
@@ -231,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p4BiY2NZIGfn",
-        "outputId": "33d424e6-8493-486c-b9ab-c12f79162ce5"
+        "outputId": "ce684729-7c24-494b-a86e-db6ad4b05b2a"
       },
-      "execution_count": 30,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,22 +299,21 @@
         "        print(f\"   - {error_name}: {count} occurrences\")\n",
         "    print(f\"\\n   These three errors account for {top_3_errors_percentage:.1f}% of all code-crashing issues.\")\n",
         "\n",
-        "    print(\"\\n3. Key Insight: Top Problematic Questions\")\n",
+        "    print(\"\\n3.Top Problematic Questions\")\n",
         "    print(\"   -----------------------------------------\")\n",
         "    print(\"   The following six questions generate the most problems:\")\n",
         "    for q_name, count in top_6_questions.items():\n",
         "        print(f\"   - Question {q_name}: {count} problems\")\n",
-        "    print(f\"\\n   These six questions account for {top_6_questions_percentage:.1f}% of all logged problems.\")\n",
-        ""
+        "    print(f\"\\n   These six questions account for {top_6_questions_percentage:.1f}% of all logged problems.\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cTqssOgHL-Cs",
-        "outputId": "f4c73927-bfe7-4a44-fcc0-ee3b80f9efe2"
+        "outputId": "28d2aaa1-bb2b-4b05-f36d-6a91ac49b461"
       },
-      "execution_count": 45,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +339,7 @@
             "\n",
             "   These three errors account for 83.5% of all code-crashing issues.\n",
             "\n",
-            "3. Key Insight: Top Problematic Questions\n",
+            "3.Top Problematic Questions\n",
             "   -----------------------------------------\n",
             "   The following six questions generate the most problems:\n",
             "   - Question C1-Q8: 1545 problems\n",
